infrastructure/bluepod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-capstone

spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-capstone
  template:
    metadata:
      labels:
        app: flask-capstone
        version: "1.10"

    spec:
      containers:
        - name: flask-capstone-container
          image: ovolmar/flask-blue:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
