infrastructure/greenpod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-green-deployment
  labels:
    app: flask-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-green
  template:
    metadata:
      labels:
        app: flask-green
    spec:
      containers:
        - name:  flask-green
          image: ovolmar/flask-green:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
