infrastructure/blue-services.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-blue-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: flask-blue
