infrastructure/green-services.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-flask-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: flask-green
    version: ${VERSION}
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: sample-flask-service-nodeport
spec:
  type: NodePort
  selector:
    app:  flask-green
    version: ${VERSION}
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: sample-flask-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: flask-green
    version: ${VERSION}
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
