infrastructure/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-blue-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-blue-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
            
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-fl-blue
spec:
  type: LoadBalancer
  selector:
    app: flask-blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
